<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jokenpo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundJkp"
        android:layout_width="384dp"
        android:layout_height="177dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/backgroundJkp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_jokenpo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewP2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/imageViewP2"
        app:layout_constraintBottom_toTopOf="@+id/buttonTesoura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/interrogacao"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/imageViewVS"
        app:layout_constraintBottom_toTopOf="@+id/buttonPapel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        app:srcCompat="@drawable/vs"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewP1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/imageViewP1"
        app:layout_constraintBottom_toTopOf="@+id/buttonPedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/interrogacao"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonTesoura"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/buttonTesoura"
        android:onClick="toqueBotao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/tesoura"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonLagarto"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/buttonLagarto"
        android:onClick="toqueBotao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/lagarto"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonPedra"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/buttonPedra"
        android:onClick="toqueBotao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pedra" />

    <ImageButton
        android:id="@+id/buttonSpock"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/buttonSpock"
        android:onClick="toqueBotao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/spock"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonPapel"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/buttonPapel"
        android:onClick="toqueBotao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonTesoura"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/buttonPedra"
        app:srcCompat="@drawable/papel"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>